# old_my_bigdft

./: .gitattributes  .gitignore  README.md
bigdft-master/bigdft/: Installer.py  bigdft.modules  distfiles  glib3.patch  gnome.modules  v_sim-dev.patch
bigdft-master/bigdft/GaIn-1.0/: GaIn.config.h  GaIn.config.h.in  GaIn.config.h.in~  Makefile.am  Makefile.in  configure  configure.ac
bigdft-master/bigdft/GaIn-1.0/autom4te.cache/: output.0  traces.0  traces.1
bigdft-master/bigdft/GaIn-1.0/doc/: Makefile.am  Makefile.in  index.html
bigdft-master/bigdft/GaIn-1.0/src/: Coulomb.f90  CoulombUtil.f90  CubicHarmonicProduct.f90  Electrostatics.f90  GaIn.h  Laplacian.f90  Makefile.am  Makefile.in  Overlap.f90  R_1_norm.f90  XYZ_power_to_ir.f90
bigdft-master/bigdft/GaIn-1.0/tests/: Makefile.am  Makefile.in  test_Coulomb.f90  test_Electrostatics.f90  test_Laplacian.f90  test_Overlap.f90  test_R_1_norm.f90
bigdft-master/bigdft/PyBigDFT/: setup.py
bigdft-master/bigdft/PyBigDFT/BigDFT/: BZ.py  Calculators.py  DoS.py  Fragments.py  Logfiles.py  wahba.py
bigdft-master/bigdft/bigdft/: Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac
bigdft-master/bigdft/chess/: Makefile.in  aclocal.m4  configure  configure.ac
bigdft-master/bigdft/futile/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  futile.pc.in
bigdft-master/bigdft/jhbuild/: defaults.jhbuildrc
bigdft-master/bigdft/libABINIT/: Makefile.in  aclocal.m4  configure
bigdft-master/bigdft/libxc/: Makefile.in  aclocal.m4  configure
bigdft-master/bigdft/m4/: suitepkg.m4
bigdft-master/bigdft/psolver/: Makefile.in  aclocal.m4  config.h.in~  configure
bigdft-master/bigdft/rcfiles/: briaree.rc  container.rc  dynamic.rc  k_computer.rc  macos_10.12-ntpoly.rc
bigdft-master/bigdft/spred/: Makefile.in  aclocal.m4  config.h.in  configure
bigdft-master/bigdft/yaml/: configure
(+607 files in other folders)
